<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>rmw_opendds_shared_cpp</name>
  <version>0.6.1</version>
  <description>C++ types and functions shared by the ROS middleware interface to OpenDDS Static and OpenDDS Dynamic.</description>
  <maintainer email="jwillemsen@remedy.nl">Johnny Willemsen</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_cmake</buildtool_depend>

  <buildtool_export_depend>ament_cmake</buildtool_export_depend>
  <buildtool_export_depend>rosidl_cmake</buildtool_export_depend>

  <build_depend>opendds_cmake_module</build_depend>
  <build_depend>rcutils</build_depend>
  <build_depend>rmw</build_depend>
  <build_depend>opendds</build_depend>
  <build_depend>rosidl_generator_c</build_depend>
  <build_depend>rosidl_generator_cpp</build_depend>
  <build_depend>rosidl_generator_dds_idl</build_depend>
  <build_depend>rosidl_typesupport_opendds_c</build_depend>
  <build_depend>rosidl_typesupport_opendds_cpp</build_depend>

  <build_export_depend>opendds_cmake_module</build_export_depend>
  <build_export_depend>opendds</build_export_depend>
  <build_export_depend>rosidl_generator_c</build_export_depend>
  <build_export_depend>rosidl_generator_cpp</build_export_depend>
  <build_export_depend>rosidl_typesupport_opendds_c</build_export_depend>
  <build_export_depend>rosidl_typesupport_opendds_cpp</build_export_depend>

  <exec_depend>rcutils</exec_depend>
  <exec_depend>rmw</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
